# ece464-databases

./: LICENSE  README.md  syllabus.md
assignments/assignment-1/: Assignment1.md
assignments/assignment-2/: Assignment2.md  sailors.sql
assignments/final-project/: Final_submission.md  MVP_Checkin.md  README.md
class/week1-simple-db/: PERSISTENCE.md  QUICKSTART.md  example.py  example_persistence.py  persistence.py  test_persistence.py
class/week3-fullstack/: .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  TYPESCRIPT.md  TYPESCRIPT_SUMMARY.md  VERIFICATION.md  run-dev.sh
class/week3-fullstack/backend/: README.md  pyproject.toml
class/week3-fullstack/backend/app/: data.py  main.py  models.py
class/week3-fullstack/backend/app/routers/: animals.py  stats.py
class/week3-fullstack/backend/tests/: test_api.py  test_models.py
class/week4-querying/: INSIGHTS.md  README.md  grammys_complete.sql  grammys_data.sql  interesting_queries.sql  (+1 more)
class/week5-orm/server/: .env.example  alembic.ini  pyproject.toml
class/week5-orm/server/alembic/: env.py
class/week5-orm/server/alembic/versions/: 10ce2c8b9d7d_initial_schema.py  990ecbbaeaaf_create_avatar_url.py
class/week5-orm/server/app/: config.py  database.py  main.py  ws.py
class/week5-orm/server/app/models/: __init__.py  base.py  prompt.py  room.py  room_player.py  submission.py  user.py  vote.py
class/week5-orm/server/app/routers/: rooms.py  submissions.py  users.py
week1-simple-db/: PROJECT_SUMMARY.md  README.md  USAGE.md  database.py  pyproject.toml  test_database.py
(+42 files in other folders)
